2003-09-24	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bsp_specs: Remove *lib:.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* clock/ckinit.c, console/console.c, include/bsp.h, shmsupp/addrconv.c,
	shmsupp/getcfg.c, shmsupp/lock.c, shmsupp/mpisr.c, start/start.S,
	startup/bspclean.c, startup/bspstart.c, startup/exit.c,
	startup/linkcmds, startup/setvec.c, timer/timer.c, timer/timerisr.S:
	URL for license changed.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* clock/Makefile.am: Reflect having moved automake/.
	* console/Makefile.am: Reflect having moved automake/.
	* include/Makefile.am: Reflect having moved automake/.
	* shmsupp/Makefile.am: Reflect having moved automake/.
	* start/Makefile.am: Reflect having moved automake/.
	* startup/Makefile.am: Reflect having moved automake/.
	* timer/Makefile.am: Reflect having moved automake/.
	* wrapup/Makefile.am: Reflect having moved automake/.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-08-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 445/bsps
	* bsp_specs: Remove -D__embedded__ -Asystem(embedded) from cpp.
	Remove cpp, old_cpp (now unused).

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* console/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* shmsupp/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* start/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* startup/Makefile.am: Don't include @RTEMS_BSP@.cfg.