@@ -18,12 +18,10 @@ RTEMS_CHECK_MULTIPROCESSING(RTEMS_BSP)
 
 AM_CONDITIONAL(HAS_MP,test "$HAS_MP" = "yes")
 
-
 # Explicitly list all Makefiles here
 AC_CONFIG_FILES([Makefile
 clock/Makefile
 console/Makefile
-include/Makefile
 shmsupp/Makefile
 start/Makefile
 startup/Makefile
