@@ -5,12 +5,20 @@
 ACLOCAL_AMFLAGS = -I ../../../../aclocal
 
 # wrapup is the one that actually builds and installs the library
-#  from the individual .rel files built in other directories
-SUBDIRS = include start startup clock console timer wrapup
+# from the individual .rel files built in other directories
+SUBDIRS = . start startup clock console timer wrapup
 
 include $(top_srcdir)/../../bsp.am
 
-EXTRA_DIST = bsp_specs times
+nodist_include_HEADERS += $(top_srcdir)/../../shared/include/coverhd.h
+
+all-local: $(PREINSTALL_FILES)
+
+EXTRA_DIST = times
+
+$(PROJECT_INCLUDE)/coverhd.h: $(top_srcdir)/../../shared/include/coverhd.h
+	$(INSTALL_DATA) $< $@
+PREINSTALL_FILES += $(PROJECT_INCLUDE)/coverhd.h
 
 include $(top_srcdir)/../../../../automake/subdirs.am
 include $(top_srcdir)/../../../../automake/local.am
